--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "@angular/platform-browser": "~11.2.1",
     "@angular/platform-browser-dynamic": "~11.2.1",
     "@angular/router": "~11.2.1",
+    "ng-zorro-antd": "^11.4.1",
+    "ngx-useful-swiper": "^10.0.1",
     "rxjs": "~6.6.0",
+    "swiper": "^6.7.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
@@ -27,6 +30,7 @@
     "@angular-devkit/build-angular": "~0.1102.1",
     "@angular/cli": "~11.2.1",
     "@angular/compiler-cli": "~11.2.1",
+    "@types/aos": "^3.0.3",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
