--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~11.2.1",
     "ng-zorro-antd": "^11.4.1",
     "ngx-useful-swiper": "^10.0.1",
+    "primeicons": "^4.1.0",
+    "primeng": "^12.0.0-rc.1",
     "rxjs": "~6.6.0",
     "swiper": "^6.7.0",
     "tslib": "^2.0.0",
